--- a/views/index.jade
+++ b/views/index.jade
@@ -2,8 +2,8 @@ extends layout
 
 block content
 	.container
-		h1 Omega 3 Studios
-		h2 Application for Senior Web Developer
+		h1 Super Hero Studios
+		h2 Application for Super Duper Web Developer
 
 		form#application-form(action="/applicant", method="post")
 			.form-group
